# copilot-cli-relay

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: claude-config.ps1  codex-config.ps1  extract-token.ps1  proxy.ps1
skill/claude-model-switch/: SKILL.md
skill/model-switch/: SKILL.md
src/claude_copilot_cli_relay/: __init__.py  __main__.py  config.py  errors.py  headers.py  logging_setup.py  proxy.py  server.py
src/copilot_cli_relay/: __init__.py  __main__.py  claude_proxy.py  codex_proxy.py  config.py  errors.py  headers.py  logging_setup.py  model_capabilities.py  proxy_shared.py  security.py  server.py
tests/unit/: test_body_rewrite.py  test_claude_body_rewrite.py  test_claude_proxy.py  test_codex_proxy.py  test_config.py  test_errors.py  test_headers.py  test_misc.py  test_model_capabilities.py  test_proxy.py  test_redaction.py
